--- a/.github/workflows/pipe.yaml
+++ b/.github/workflows/pipe.yaml
@@ -45,9 +45,9 @@ jobs:
       run : terraform -chdir=./terraform plan -input=false -out tfplan
       # run : terraform -chdir=./terraform plan -input=false -destroy -out tfplan
 
-    - name: Step 08 - Terraform Apply
-      run : terraform -chdir=./terraform apply -auto-approve -input=false tfplan
+    # - name: Step 08 - Terraform Apply
+    #   run : terraform -chdir=./terraform apply -auto-approve -input=false tfplan
 
-    - name: Step 09 - Terraform Show
-      run : terraform -chdir=./terraform show
+    # - name: Step 09 - Terraform Show
+    #   run : terraform -chdir=./terraform show
       
