--- a/.github/workflows/pipe.yaml
+++ b/.github/workflows/pipe.yaml
@@ -38,10 +38,10 @@ jobs:
     - name: Step 05 - Terraform Init
       run : terraform -chdir=./terraform init -input=false
 
-    - name: Step 06 - Terraform Unit tests
+    - name: Step 06 - Terraform Unit Tests
       run : terraform -chdir=./terraform validate
 
-    - name: Step 07 - Terraform Plan
+    - name: Step 07 - Terraform Plan with Contract Tests
       run : terraform -chdir=./terraform plan -input=false -out tfplan
       # run : terraform -chdir=./terraform plan -input=false -destroy -out tfplan
 
