--- a/.github/workflows/pipe.yaml
+++ b/.github/workflows/pipe.yaml
@@ -12,14 +12,19 @@ jobs:
  
     steps:
 
-    - name: Step 01 - Terraform Install
-      env :
-        TERRAFORM_VERSION: "1.5.6"
-      run : |
-        tf_version=$TERRAFORM_VERSION
-        wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
-        unzip terraform_"$tf_version"_linux_amd64.zip
-        sudo mv terraform /usr/local/bin/
+    - name: Step 01 - Terraform Setup
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.5.6
+
+    # - name: Step 01 - Terraform Install
+    #   env :
+    #     TERRAFORM_VERSION: "1.5.6"
+    #   run : |
+    #     tf_version=$TERRAFORM_VERSION
+    #     wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
+    #     unzip terraform_"$tf_version"_linux_amd64.zip
+    #     sudo mv terraform /usr/local/bin/
 
     - name: Step 02 - Terraform Version
       run : terraform --version
