--- a/.github/workflows/pipe.yaml
+++ b/.github/workflows/pipe.yaml
@@ -42,9 +42,12 @@ jobs:
       run : terraform -chdir=./terraform plan -input=false -out tfplan
       # run : terraform -chdir=./terraform plan -input=false -destroy -out tfplan
 
-    - name: Step 08 - Terraform Apply
-      run : terraform -chdir=./terraform apply -auto-approve -input=false tfplan
+    - name: Step 08 - Checkov
+      run: pip3 install checkov
 
-    - name: Step 09 - Terraform Show
-      run : terraform -chdir=./terraform show
+    # - name: Step 08 - Terraform Apply
+    #   run : terraform -chdir=./terraform apply -auto-approve -input=false tfplan
+
+    # - name: Step 09 - Terraform Show
+    #   run : terraform -chdir=./terraform show
       
