Terraform Security Scannning Setup

--- a/.github/workflows/pipe.yaml
+++ b/.github/workflows/pipe.yaml
@@ -42,9 +42,11 @@ jobs:
       run : terraform -chdir=./terraform plan -input=false -out tfplan
       # run : terraform -chdir=./terraform plan -input=false -destroy -out tfplan
 
-    - name: Step 08 - Checkov
+    - name: Step 08 - Terraform Security Scannning Setup
       run: pip3 install checkov
 
+    - name: Step 09 - Terraform Security Scannning Run
+      run: checkov --directory ./terraform
     # - name: Step 08 - Terraform Apply
     #   run : terraform -chdir=./terraform apply -auto-approve -input=false tfplan
 
